# digital-images-processing-course

./: .gitignore  CMakeLists.txt  COMPILING.md  LICENSE  README.md
.vscode.win/: c_cpp_properties.json  launch.json  tasks.json
conteudo/: CMakeLists.txt
conteudo/colormap/: main.cpp
conteudo/colorrange/: main.cpp
conteudo/colorspace/: main.cpp
conteudo/filestorage/: main.cpp  senoide-256.yml
conteudo/pixels/: main.cpp
conteudo/visualizacao/: image.txt  main.cpp  plotar_3d.plt
exercicios/: CMakeLists.txt  colormap.cpp  colorrange.cpp  regions.cpp  trocaregioes.cpp  video-negativo.cpp  video-tons-cinza.cpp
exercicios/filestorage-senoides/: README.md  main.cpp  senoide-horizontal-256.yml
exercicios/visualizacao/: README.md
hello/: CMakeLists.txt  main.cpp
labeling/: README.md  main.cpp
pixels/: CMakeLists.txt  main.cpp
video/: main.cpp
visualizacao/: line.txt  main.cpp  plotar_histeps.plt  plotar_matrix.plt
